--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=2.19.2 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,6 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^5.1.1
+  google_fonts: ^4.0.3
+  flutter_screenutil: ^5.7.0
+  get: ^4.6.5
+  persian_number_utility: ^1.1.3
+  http: ^0.13.5
+  material_color_gen: ^2.0.0
+  universal_html: ^2.2.1
+  cached_network_image: ^3.2.3
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +84,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: IranSansWeb
+      fonts:
+        - asset: fonts/IRANSansWeb(FaNum).ttf
+
   # fonts:
   #   - family: Schyler
   #     fonts:
