--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,16 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/images/twitter.png
+    - assets/images/instagram.png
+    - assets/images/linkedin.png
+    - assets/images/telegram-app.png
+    - assets/images/logo.png
+    - assets/images/enamad.png
+    - assets/images/map.png
+    - assets/images/Tick.png
+    - assets/images/zabdar.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -88,7 +98,9 @@ flutter:
     - family: IranSansWeb
       fonts:
         - asset: fonts/IRANSansWeb(FaNum).ttf
-
+    - family: FugazOne
+      fonts:
+        - asset: fonts/FugazOne-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
