--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   universal_html: ^2.2.1
   cached_network_image: ^3.2.3
   flutter_spinkit: ^5.1.0
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.4.2
 
 dev_dependencies:
   flutter_test:
