--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
     - assets/images/map.png
     - assets/images/Tick.png
     - assets/images/zabdar.png
+    - assets/images/purchase.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
