--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   firebase_core: ^2.9.0
   firebase_auth: ^4.4.2
+  carousel_slider: ^4.2.1
+  persian_datetime_picker: ^2.6.0
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +82,7 @@ flutter:
     - assets/images/map.png
     - assets/images/Tick.png
     - assets/images/zabdar.png
+    - assets/images/villa_img.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
