--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   firebase_core: ^2.9.0
   firebase_auth: ^4.4.2
+  carousel_slider: ^4.2.1
+  persian_datetime_picker: ^2.6.0
 
 dev_dependencies:
   flutter_test:
