feat(feature/home-page) : add emptyImage.png

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - assets/images/villaBackground.jpg
     - assets/images/villa_img.png
     - assets/images/maskPage.png
+    - assets/images/emptyImage.png
     
   # To add assets to your application, add an assets section, like this:
   # assets:
